tests/integration/libuild/errors/reference-error/error.js
module.exports = {
  msg: 'ReferenceError: bcd is not defined',
};
